--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://pravallika:pralak1@cluster1.3ipip.mongodb.net/?retryWrites=true&w=majority&appName=cluster1
+JWT_SECRET_KEY=NOSECRET
